--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,34 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --font-sans: var(--font-fig-sans);
+    --color-baseclr: #005bc0;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+    background: var(--background);
+    color: var(--foreground);
+    font-family: var(--font-sans);
+}
+
+@layer base {
+    .container {
+        @apply mx-auto px-6 max-lg:!max-w-full;
+    }
+    .react-tel-input .flag-dropdown {
+        @apply !border-none !bg-transparent !pl-2;
+    }
+    .react-tel-input .selected-flag {
+        @apply hover:!bg-transparent;
+    }
+    .react-tel-input .flag-dropdown.open .selected-flag {
+        @apply !bg-transparent;
+    }
 }
